assets: fix header spacing

--- a/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/theme.less
+++ b/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/theme.less
@@ -35,6 +35,7 @@ h6 {
   background-image: @navbar_background_image;
   background-color: @navbar_background_color;
   border-color: transparent;
+  padding: 8px;
 
   .button[href^="/signup"] {
     background-color: @signup_background_color;
